force-app/main/default/objects/CCX_Project__c/CCX_Project__c.object-meta.xml
<CustomObject>
    <label>CCX Project</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>CCX Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>