force-app/main/default/objects/CCX_Project__c/fields/CCX_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CCX_Actual_End_Date__c</fullName>
    <label>CCX Actual End Date</label>
    <type>Date</type>
</CustomField>