force-app/main/default/objects/CCX_Project__c/fields/CCX_Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CCX_Actual_Start_Date__c</fullName>
    <label>CCX Actual Start Date</label>
    <type>Date</type>
</CustomField>