force-app/main/default/objects/CCX_Project__c/fields/CCX_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>CCX_Project_Description__c</fullName>
    <label>CCX Project Description</label>
    <type>TextArea</type>
</CustomField>