force-app/main/default/objects/CCX_Project__c/fields/CCX_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_Project_Name__c</fullName>
    <label>CCX Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>